--- a/index.html
+++ b/index.html
@@ -74,10 +74,87 @@
                         </div>
                             </div>
                         </div>
-                </div>
+                        <div class="box-challenging-fun">
+                            <div class="box-infor">
+                                <div class="title">Challenging and fun</div>
+                                <div class="note">If exciting events interest you, then donÅft miss out on these! From beginner to advanced level, thereÅfs one for everybody!</div>
+                                <h3>
+                                    <a href="" class="btn-view-race">View all events</a>
+                                </h3>
+                            </div>
+                            <div class="list-event">
+                                <ul class="box-current-race">
+                                    <li>
+                                        <a href="">
+                                            <div class="box-race-wrapper">
+                                                <p class="title">Happy Lungs Virtual Run (FREE) 2020</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <div class="box-race-wrapper">
+                                                <p class="title">Happy Lungs Virtual Run (FREE) 2020</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <div class="box-race-wrapper">
+                                                <p class="title">Happy Lungs Virtual Run (FREE) 2020</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <div class="box-race-wrapper">
+                                                <p class="title">Happy Lungs Virtual Run (FREE) 2020</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="box-rewarding-experience">
+                            <div class="list">
+                                <ul>
+                                    <li><img src="https://s3-ap-southeast-1.amazonaws.com/web42-assets/images/home/hell_week_2018.png" alt=""></li>
+                                    <li><img src="https://s3-ap-southeast-1.amazonaws.com/web42-assets/images/home/hell_week_2018.png" alt=""></li>
+                                    <li><img src="https://s3-ap-southeast-1.amazonaws.com/web42-assets/images/home/hell_week_2018.png" alt=""></li>
+                                    <li><img src="https://s3-ap-southeast-1.amazonaws.com/web42-assets/images/home/hell_week_2018.png" alt=""></li>
+                                </ul>
+                            </div>
+                            <div class="box-infor">
+                                <div class="title">Rewarding experience</div>
+                                <div class="note">Be the envy of your friends with our exciting medals and pins! Share the joy of earning these exclusive rewards with them and create new memories together.</div>
+                            </div>
+                        </div>
+                        <div class="box-instagram-comumity">
+                            <div class="list">
+                                <div class="title">Connect with our online and offline community</div>
+                                <div class="note"><span>347483</span> members have joined 42Race. Join our diverse community of fitness enthusiasts, from first-timers to the elite - from all over the world!</div>
+                                <h3>
+                                    <a href="" class="btn-join-community">Join the comunity</a>
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="box-get-app">
+                                <div class="box-photo-app">
+                                    <img src="https://s3-ap-southeast-1.amazonaws.com/web42-assets/images/home/home-mobileapp-img.png" alt="">
+                                </div>
+                                <div class="box-infor list">
+                                    <div class="title">Get the app</div>
+                                    <div class="note">Start on a brand new virtual fitness experience now! Our app is currently in the Beta stage, but your experience matters, and you can help us</div>
+                                    <div class="box-btn-mobile-app">
+                                        <a href="" class="btn-ios"></a>
+                                        <a href="" class="btn-android"></a>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+        </div>
     </div>
-    
 </body>
 </html>
