--- a/index.html
+++ b/index.html
@@ -151,9 +151,82 @@
                                     </div>
                                 </div>
                         </div>
+                        <div class="box-news">
+                            <p class="title-header">In the news</p>
+                            <div class="news-items">
+                                <div class="list">
+                                    <a href="">
+                                            <div class="box-news-inner">
+                                                <img src="https://virtual-race-submissions.s3-ap-southeast-1.amazonaws.com/images/NSlider-BFM-logo-542x200-jpg-9oe28052019-120805" alt="">
+                                                <p class="name">Never run alone again</p>
+                                                <p class="time">BFM, May 02, 2019</p>
+                                            </div>
+                                    </a>
+                                </div>
+                                <div class="list">
+                                    <a href="">
+                                            <div class="box-news-inner">
+                                                <img src="https://virtual-race-submissions.s3-ap-southeast-1.amazonaws.com/images/NSlider-BFM-logo-542x200-jpg-9oe28052019-120805" alt="">
+                                                <p class="name">Never run alone again</p>
+                                                <p class="time">BFM, May 02, 2019</p>
+                                            </div>
+                                    </a>
+                                </div>
+                                <div class="list">
+                                    <a href="">
+                                            <div class="box-news-inner">
+                                                <img src="https://virtual-race-submissions.s3-ap-southeast-1.amazonaws.com/images/NSlider-BFM-logo-542x200-jpg-9oe28052019-120805" alt="">
+                                                <p class="name">Never run alone again</p>
+                                                <p class="time">BFM, May 02, 2019</p>
+                                            </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="btn-all-news">
+                                <a href="" class="btn-view-all-news">
+                                    <span>View all news</span>
+                                </a>
+                            </p>
+                        </div>
                     </div>
         </div>
-        <div class="footer">
+        <div class="box-footer">
+            <div class="box-footer-inner">
+                <div class="footer-content">
+                    <div class="list">
+                        <p class="title">Company</p>
+                        <ul>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Press</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <p class="title">Races</p>
+                        <ul>
+                            <li><a href="">FAQ</a></li>
+                            <li><a href="">Virtual Races</a></li>
+                            <li><a href="">Corporate solutions</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <p class="title">Follow</p>
+                        <ul>
+                            <li><a href="">Instagram</a></li>
+                            <li><a href="">Facebook</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="box-term-conditions">
+                    <div class="term-conditions">
+                        <p><a href=""><span>? 2021 42Race ? Terms and Conditions</span></a></p>
+                    </div>
+                    <div class="box-btn-mobile-app">
+                        <a href="" class="btn-ios"></a>
+                        <a href="" class="btn-android"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
